--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,55 +1,59 @@
-@import 'config';
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap");
 
-body{
-    background: $primary-color;
-    color:#fff;
-    height: 100vh;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    line-height: 1;
+@import "config";
+@import "home";
+
+body {
+  background: $primary-color;
+  color: #fff;
+  height: 100vh;
+  font-family: "Poppins", sans-serif;
+  line-height: 1;
 }
 
-h1,h2,h3{
-    font-weight: 400;
+h1,
+h2,
+h3 {
+  font-weight: 400;
 }
 
-a{
-    color: #fff;
-    text-decoration: none;
+a {
+  color: #fff;
+  text-decoration: none;
 }
 
-header{
+header {
+  position: fixed;
+  z-index: 2;
+  width: 100%;
+  padding: 1rem;
+}
+
+main {
+  height: 100%;
+  width: 100%;
+
+  .social-icons {
     position: fixed;
-    z-index: 2;
-    width: 100%;
-    padding: 1rem;
-}
+    bottom: 1rem;
+    left: 1rem;
 
-main{
-    height: 100%;
-    width: 100%;
+    a {
+      padding: 0.4rem;
 
-    .social-icons{
-        position: fixed;
-        bottom: 1rem;
-        left: 1rem;
-
-        a{
-            padding: 0.4rem;
-
-            &:hover{
-                color: $secondary-color;
-            }
-        }
+      &:hover {
+        color: $secondary-color;
+      }
     }
-
+  }
 }
 
-footer{
-    font-size: 1rem;
-    position: fixed;
-    bottom: 0.4rem;
-    right: 1rem;
-    text-align: right;
-    padding: 1rem;
-    color: #fff ;
+footer {
+  font-size: 1rem;
+  position: fixed;
+  bottom: 0.4rem;
+  right: 1rem;
+  text-align: right;
+  padding: 1rem;
+  color: #fff;
 }
