--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,6 +3,7 @@
 @import "config";
 @import "home";
 @import 'menu';
+@import 'about';
 
 body {
   background: $primary-color;
@@ -18,6 +19,9 @@ h3 {
   font-weight: 400;
 }
 
+.text-secondary{
+    color: $secondary-color;
+}
 a {
   color: set-text-color($primary-color);
   text-decoration: none;
